# ree

./: .gitignore  Essence_PyParser.ipynb  LICENSE  MEMO27-03-2023.md  NormalisersMemo.txt  README.md  astize  emini.md  gc-simple.astjson  gc-simple.essence  graph-shortcheaptour-2017070301.astjson  harness  notes-20230403.md  notes.md  r-sum.essence  rewriting.md  sketchtests-nb.ipynb  sketchtests.py  sketchtests2.py  specToNX.json  temporarySpecGraph.host  transformtest.gexf
ICGT-Demo/: FGC-Param-Solution-G.py  GraphColouring.html  ParamSolutionTest.html  ParamSolutionTest3.html  catalogue_utils.py  checkjson.py  graphcolourstest2.json  graphcolourstest3.json  k_fold_colouring_to_image.py  test.json  transform_solve_test3.json
docs/: .buildinfo  .buildinfo.bak  building-docs.html  genindex.html  greee.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
emini/: emini.bib  emini.bnf
eminipyparser/: ETTouring.py  ETransformulator.py  ETtesting.py  ETtesttour.py  GP2Graph.py  Icingnotes.md  Parsing+icing_test_log_full.py  double_reverse_test_log_full.py  eminipyparser.py  eminipyparser2.py  eminipyparser2typed.py  empp2debug.py  icing.py  icing_test.py  jsonify_test.py  minitest.py  parse_tests_and_log_full.py  parser2typed_test.py  parsertests.py  parsing+icing_checker.py  readme.md
experiments/: Essence_ETGraph_notebook.ipynb  Rewrites_results_vis.html  Rewrites_results_vis3.html  convert_all.py  crank1.py  crank2.py  crankSanityCheck.csv  gcmulti_CP2024.py  transform_solve_test.json  transform_solve_test3.json
gp2/: DT_test.host  DeMorganOne.gp2  InequalityFlip.gp2  commuteMul.gp2  demorgTest.host  gcmulti-func copy.gp2  gcmulti-func-ChainSawed.gp2  gcmulti-func.gp2  gcmulti.host  gcmultiRelToFunc2.gp2  gcmultiRelToFunc4.gp2  gcmultiRelToFunc6.gp2  gcmulti_DT.host  gcmultifunc_B.host  gp2Test.host  (+9 more)
greee-packaging/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
greee-packaging/src/greee/: EFormatConverters.py  EFormatGraph.py  __init__.py  applytransform.py  emini2gp2.py  eminigen.py  eminipyparser.py  essence_transforms.py  gp22emini.py  gp22json.py  gp2Graph.py  gp2Interface.py  harness.py  icing.py  instaGen.py  normalisers.py  prettyprint.py  rjs.py  tmap_plot.py  trans.py
(+786 files in other folders)
